fixed spacing and padding, adding footer

--- a/styles.css
+++ b/styles.css
@@ -91,8 +91,8 @@ ul li {
 
 /* Hero Image header container */
 .container.mt-3 {
-    padding-top: 75px;
-    padding-bottom: 50px;
+    padding-top: 200px;
+    padding-bottom: 565px;
     max-width: 1350px;
 }
 
@@ -106,8 +106,16 @@ border possibly delete later? */
     text-shadow: 6px 6px 4px black;
     background-image: url("assets/Chicago_IL\ \(33\ of\ 53\).jpg");
     background-attachment: fixed;
-    background-size: 125%;
+    background-size: 115%;
     background-position: bottom;
+}
+
+.heroName {
+    font-size: 50px;
+}
+
+.titleName {
+    font-size: 22px;
 }
 
 /* About Me section */
@@ -116,6 +124,7 @@ border possibly delete later? */
     background-size: 150%;
     background-position: center;
     background-attachment: fixed;
+    padding-top: 0px;
 }
 
 #section1 {
@@ -129,38 +138,44 @@ border possibly delete later? */
     color: white;
 }
 
+img[src="assets/Canvas Profile Picture.PNG"] {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    display: flex;
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+}
+
 p.card-text {
     font-family: sans-serif;
     color: white;
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 10px;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
-img[src="assets/Canvas Profile Picture.PNG"] {
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 10px;
-    display: flex;
-    max-width: 316.2px;
-    height: 393.276px;
-    border-radius: 10px;
+    padding-right: 75px;
+    padding-left: 75px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
 }
 
 /* Projects Section */
 #section2 {
-    padding-top: 50px;
-    padding-bottom: 10px;
+    padding-top: 225px;
+    padding-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
     font-size: 2em;
     color: white;
+}
+
+.containerFluid {
+    padding-bottom: 100px;
 }
 
 @media screen and (max-width: 650px) {
@@ -170,12 +185,16 @@ img[src="assets/Canvas Profile Picture.PNG"] {
   }
 }
 
+.col {
+    padding-top: 0px;
+    padding-bottom: 200px;
+}
+
 .card2 {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
-    background-color: rgb(127, 127, 127);
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
     text-align: center;
     font-family: sans-serif;
-    font-size: 1em;
+    font-size: 0.80em;
     color: white;
 }
 
@@ -192,7 +211,7 @@ img[src="assets/Canvas Profile Picture.PNG"] {
 
 h2 {
     font-family: 'Ubuntu', sans-serif;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.85);
     font-size: 1.3em;
     padding-top: 10px;
 }
@@ -202,7 +221,7 @@ h2 {
     color: white;
     font-size: 1em;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
 }
 
 /* Contact Section */
@@ -221,8 +240,10 @@ h2 {
 
 .containerForm {
     width: 100%;
-    padding-right: var(--bs-gutter-x,2rem);
-    padding-left: var(--bs-gutter-x,2rem);
+    padding-top: 100px;
+    padding-bottom: 300px;
+    padding-right: var(--bs-gutter-x,11rem);
+    padding-left: var(--bs-gutter-x, 11rem);
     margin-right: auto;
     margin-left: auto;
     background-image: url("assets/Chicago_IL\ \(32\ of\ 53\).jpg");
@@ -254,25 +275,8 @@ h2 {
     position: relative;
 }
 
-.center {
-    margin: 0;
-    padding-top: 25px;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-/* Resume Section */
-
-.resumeContainer {
-    margin: auto;
-    width: 50%;
-}
-
-img[src="assets/Brayden_Bridgeman_Resume.png"] {
-    width: 40%;
-    padding-top: 25px;
-    padding-bottom: 50px;
+/* Resume/Footer Section */
+.text-center {
+    padding-bottom: 0px;
+    background-color: transparent;
 }
